--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav>
+  <ul>
+    <li><a href="#progetti">Progetti</a></li>
+    <li><a href="#chi-sono">Chi sono</a></li>
+    <li><a href="#contatti">Contatti</a></li>
+  </ul>
+</nav>
+
   <header>
     <h1>Ciao, sono Elia Giordano</h1>
     <p>Visual Designer & 3D Artist</p>
