--- a/index.html
+++ b/index.html
@@ -2,24 +2,29 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Il mio Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav>
-  <ul>
-    <li><a href="#progetti">Progetti</a></li>
-    <li><a href="#chi-sono">Chi sono</a></li>
-    <li><a href="#contatti">Contatti</a></li>
-  </ul>
-</nav>
 
+  <!-- Menu di navigazione -->
+  <nav>
+    <ul>
+      <li><a href="#progetti">Progetti</a></li>
+      <li><a href="#chi-sono">Chi sono</a></li>
+      <li><a href="#contatti">Contatti</a></li>
+    </ul>
+  </nav>
+
+  <!-- Intestazione -->
   <header>
     <h1>Ciao, sono Elia Giordano</h1>
     <p>Visual Designer & 3D Artist</p>
   </header>
 
-  <section>
+  <!-- Sezione Progetti -->
+  <section id="progetti">
     <h2>I miei progetti</h2>
 
     <div class="progetto">
@@ -33,11 +38,28 @@
       <img src="3d.jpg" alt="3D esempio" width="200">
       <p>Un modello 3D realizzato con Blender per un videogioco indie.</p>
     </div>
-
   </section>
 
+  <!-- Sezione Chi Sono -->
+  <section id="chi-sono">
+    <h2>Chi sono</h2>
+    <p>Mi chiamo Elia Giordano e sono un Visual Designer con un forte interesse per la modellazione e l'animazione 3D. Uso strumenti come Adobe XD, Blender, Figma, e altri per creare esperienze visive uniche.</p>
+  </section>
+
+  <!-- Sezione Contatti -->
+  <section id="contatti">
+    <h2>Contattami</h2>
+    <form action="https://formspree.io/f/tuoid" method="POST">
+      <input type="email" name="email" placeholder="La tua email" required>
+      <textarea name="message" placeholder="Il tuo messaggio" required></textarea>
+      <button type="submit">Invia</button>
+    </form>
+  </section>
+
+  <!-- Footer -->
   <footer>
     <p>Contattami: eliagiordano@email.com</p>
   </footer>
+
 </body>
 </html>
