--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Il mio Portfolio</title>
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?
-    family=Orbitron:wght@400;500&family=Poppins:wght@300;400;600&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -47,23 +45,7 @@
   <!-- Sezione Chi Sono -->
   <section id="chi-sono">
     <h2>Chi sono</h2>
-    <p>Mi chiamo Elia Giordano e sono un Visual Designer con un forte interesse per la modellazione e l'animazione 3D. Uso strumenti come Adobe XD, Blender, Figma, e altri per creare esperienze visive uniche.</p>
+    <p>Mi chiamo Elia Giordano e sono un Visual Designer con un forte interesse per la modellazione e l'animazione 3D. Uso strumenti come Adobe XD, Blender, Figma e altri per creare esperienze visive uniche.</p>
   </section>
 
   <!-- Sezione Contatti -->
-  <section id="contatti">
-    <h2>Contattami</h2>
-    <form action="https://formspree.io/f/tuoid" method="POST">
-      <input type="email" name="email" placeholder="La tua email" required>
-      <textarea name="message" placeholder="Il tuo messaggio" required></textarea>
-      <button type="submit">Invia</button>
-    </form>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>Contattami: eliagiordano@email.com</p>
-  </footer>
-
-</body>
-</html>
