--- a/index.html
+++ b/index.html
@@ -1,127 +1,36 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio - Elia Giordano</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  
-  <!-- tsParticles library -->
-  <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.37.0/tsparticles.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio - KanekiGhoul-dev</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Background particles -->
-  <div id="particles-js"></div>
+    <header>
+        <h1>KanekiGhoul - Dev Portfolio</h1>
+        <p>Esplora il mio lavoro e la mia passione per la tecnologia e il design</p>
+    </header>
 
-  <nav>
-    <ul>
-      <li><a href="#progetti">Progetti</a></li>
-      <li><a href="#chi-sono">Chi sono</a></li>
-      <li><a href="#contatti">Contatti</a></li>
-    </ul>
-  </nav>
+    <section class="skills">
+        <div class="skill">
+            <i class="fas fa-cogs"></i>
+            <h2>Modello 3D</h2>
+            <p>Realizzazione di modelli 3D per la visualizzazione e l'animazione.</p>
+        </div>
+        <div class="skill">
+            <i class="fas fa-paint-brush"></i>
+            <h2>Logo Design</h2>
+            <p>Creazione di loghi unici e personalizzati per ogni brand.</p>
+        </div>
+    </section>
 
-  <header>
-    <h1>Ciao, sono Elia Giordano</h1>
-    <p>Visual Designer & 3D Artist</p>
-  </header>
-
-  <section id="progetti">
-    <h2>I miei progetti</h2>
-
-    <div class="progetto">
-      <h3>Logo Design</h3>
-      <img src="logo.jpg" alt="Logo esempio" width="200">
-      <p>Ho creato questo logo per un brand di moda contemporaneo.</p>
-    </div>
-
-    <div class="progetto">
-      <h3>Modello 3D</h3>
-      <img src="3d.jpg" alt="3D esempio" width="200">
-      <p>Un modello 3D realizzato con Blender per un videogioco indie.</p>
-    </div>
-  </section>
-
-  <section id="chi-sono">
-    <h2>Chi sono</h2>
-    <p>Mi chiamo Elia Giordano e sono un Visual Designer con un forte interesse per la modellazione e l'animazione 3D. Uso strumenti come Adobe XD, Blender, Figma e altri per creare esperienze visive uniche.</p>
-  </section>
-
-  <section id="contatti">
-    <h2>Contattami</h2>
-    <form action="https://formspree.io/f/tuoid" method="POST">
-      <input type="email" name="email" placeholder="La tua email" required>
-      <textarea name="message" placeholder="Il tuo messaggio" required></textarea>
-      <button type="submit">Invia</button>
-    </form>
-  </section>
-
-  <footer>
-    <p>Contattami: eliagiordano@email.com</p>
-  </footer>
-
-  <!-- tsParticles Script to generate space-like particles -->
-  <script>
-    tsParticles.load("particles-js", {
-      particles: {
-        number: {
-          value: 100,
-          density: {
-            enable: true,
-            value_area: 800
-          }
-        },
-        shape: {
-          type: "circle",
-        },
-        color: {
-          value: "#fff"
-        },
-        opacity: {
-          value: 0.5,
-          random: true,
-          anim: {
-            enable: true,
-            speed: 1,
-            opacity_min: 0.1
-          }
-        },
-        size: {
-          value: 2,
-          random: true,
-          anim: {
-            enable: true,
-            speed: 1,
-            size_min: 0.1
-          }
-        },
-        move: {
-          enable: true,
-          speed: 1,
-          direction: "none",
-          random: true,
-          straight: false,
-          out_mode: "out",
-          bounce: false
-        }
-      },
-      interactivity: {
-        detect_on: "canvas",
-        events: {
-          onhover: {
-            enable: true,
-            mode: "repulse"
-          },
-          onclick: {
-            enable: true,
-            mode: "push"
-          }
-        }
-      }
-    });
-  </script>
+    <footer>
+        <p>KanekiGhoul - Dev Portfolio © 2025</p>
+    </footer>
 
 </body>
 </html>
