--- a/index.html
+++ b/index.html
@@ -10,10 +10,28 @@
       margin: 0;
       padding: 0;
       font-family: 'Orbitron', sans-serif;
-      background: url('https://cdn.pixabay.com/photo/2017/07/05/10/33/space-2478576_1280.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: #00bfff; /* blu acceso */
+      background: #000;
+      color: #00bfff;
       overflow-x: hidden;
+      position: relative;
+    }
+
+    .animated-bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 200%;
+      height: 200%;
+      background: url('https://cdn.pixabay.com/photo/2016/11/29/04/17/space-1867616_1280.jpg') repeat;
+      background-size: cover;
+      animation: moveBg 120s linear infinite;
+      z-index: -1;
+      opacity: 0.3;
+    }
+
+    @keyframes moveBg {
+      0% { transform: translate(0, 0); }
+      100% { transform: translate(-500px, -500px); }
     }
 
     header {
@@ -110,6 +128,8 @@
   </style>
 </head>
 <body>
+  <div class="animated-bg"></div>
+
   <div class="eyes">
     <div class="eye"><div class="pupil"></div></div>
     <div class="eye"><div class="pupil"></div></div>
