--- a/index.html
+++ b/index.html
@@ -3,177 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portfolio di KanekiGhoul-dev</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Orbitron', sans-serif;
-      background: #000;
-      color: #00bfff;
-      overflow-x: hidden;
-      position: relative;
-    }
-
-    .animated-bg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 200%;
-      height: 200%;
-      background: url('https://cdn.pixabay.com/photo/2016/11/29/04/17/space-1867616_1280.jpg') repeat;
-      background-size: cover;
-      animation: moveBg 120s linear infinite;
-      z-index: -1;
-      opacity: 0.3;
-    }
-
-    @keyframes moveBg {
-      0% { transform: translate(0, 0); }
-      100% { transform: translate(-500px, -500px); }
-    }
-
-    header {
-      text-align: center;
-      padding: 3rem 1rem;
-      background: rgba(0, 0, 0, 0.7);
-    }
-
-    header h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5rem;
-    }
-
-    header p {
-      font-size: 1.2rem;
-      color: #b0dfff;
-    }
-
-    .section {
-      padding: 2rem;
-      text-align: center;
-      background: rgba(0, 0, 0, 0.6);
-      margin: 2rem;
-      border-radius: 15px;
-      box-shadow: 0 0 15px #00bfff;
-    }
-
-    .section h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-
-    .icon {
-      font-size: 4rem;
-      display: inline-block;
-      margin: 1rem;
-      transition: transform 0.3s ease, color 0.3s ease;
-      cursor: pointer;
-    }
-
-    .icon:hover {
-      transform: scale(1.2) rotate(5deg);
-      color: #ffffff;
-      text-shadow: 0 0 15px #00bfff;
-    }
-
-    .eyes {
-      position: fixed;
-      top: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 10;
-      display: flex;
-      gap: 15px;
-    }
-
-    .eye {
-      width: 30px;
-      height: 30px;
-      border-radius: 50%;
-      background: #000;
-      border: 2px solid #00bfff;
-      overflow: hidden;
-      position: relative;
-    }
-
-    .pupil {
-      width: 12px;
-      height: 12px;
-      background: #00bfff;
-      border-radius: 50%;
-      position: absolute;
-      top: 9px;
-      left: 9px;
-      transition: all 0.1s ease;
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      color: #ccc;
-      background: rgba(0, 0, 0, 0.8);
-      margin-top: 4rem;
-    }
-
-    a {
-      color: #00bfff;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-shadow: 0 0 10px #00bfff;
-    }
-  </style>
+  <title>Portfolio di Kaneki</title>
+  <link rel="stylesheet" href="stile.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <div class="animated-bg"></div>
-
-  <div class="eyes">
-    <div class="eye"><div class="pupil"></div></div>
-    <div class="eye"><div class="pupil"></div></div>
+  <div id="background"></div>
+  <div class="occhi">
+    <div class="occhio"><div class="pupilla"></div></div>
+    <div class="occhio"><div class="pupilla"></div></div>
   </div>
 
   <header>
     <h1>KanekiGhoul-dev</h1>
-    <p>Modellatore 3D • Visual Designer • Creativo dallo spazio</p>
+    <p>Modellazione 3D • Logo Design • Creatività Spaziale</p>
   </header>
 
-  <div class="section">
-    <h2>Chi Sono</h2>
-    <p>Appassionato di tecnologia, design e forme aliene. Creo esperienze visive uniche che spaziano dal design grafico alla modellazione 3D.</p>
-  </div>
-
-  <div class="section">
-    <h2>Competenze</h2>
-    <span class="icon">👽</span>
-    <span class="icon">🛸</span>
-    <span class="icon">✨</span>
-    <p>Modellazione 3D, Logo Design, UI futuristica, Animazioni spaziali</p>
-  </div>
-
-  <div class="section">
-    <h2>Contatti</h2>
-    <p>Email: kanekighoul.dev@galaxy.net</p>
-    <p>GitHub: <a href="https://github.com/KanekiGhoul-dev" target="_blank">KanekiGhoul-dev</a></p>
-  </div>
-
-  <footer>
-    © 2025 KanekiGhoul-dev. Tutti i diritti riservati intergalatticamente.
-  </footer>
-
-  <script>
-    const pupils = document.querySelectorAll(".pupil");
-
-    document.addEventListener("mousemove", (e) => {
-      pupils.forEach(pupil => {
-        const rect = pupil.parentElement.getBoundingClientRect();
-        const x = e.clientX - rect.left - rect.width / 2;
-        const y = e.clientY - rect.top - rect.height / 2;
-        pupil.style.transform = `translate(${x / 10}px, ${y / 10}px)`;
-      });
-    });
-  </script>
+  <section class="servizi">
+    <div class="card">
+      <h2>👽 Modellazione 3D</h2>
+      <p>Creo modelli spaziali per progetti digitali e videogiochi.</p>
+    </div>
+    <div class="card">
+      <h2>🚀 Logo Design</h2>
+      <p>Design alieni unici per brand originali e visionari.</p>
+    </div>
+  </section>
 </body>
+<script>
+  const occhi = document.querySelectorAll('.occhio');
+  document.addEventListener('mousemove', (e) => {
+    occhi.forEach(occhio => {
+      const r = occhio.getBoundingClientRect();
+      const x = e.clientX - r.left - r.width / 2;
+      const y = e.clientY - r.top - r.height / 2;
+      occhio.querySelector('.pupilla').style.transform = `translate(${x * 0.1}px, ${y * 0.1}px)`;
+    });
+  });
+</script>
 </html>
